--- a/TPFINAL/src/Vista/crearPelicula.form
+++ b/TPFINAL/src/Vista/crearPelicula.form
@@ -179,10 +179,11 @@
             <Component class="javax.swing.JTable" name="jTable1">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="6" rowCount="4">
+                  <Table columnCount="7" rowCount="4">
                     <Column editable="false" title="Titulo" type="java.lang.Object"/>
                     <Column editable="false" title="Director" type="java.lang.Object"/>
                     <Column editable="false" title="Actores" type="java.lang.Object"/>
+                    <Column editable="false" title="Origen" type="java.lang.Object"/>
                     <Column editable="false" title="Genero" type="java.lang.Object"/>
                     <Column editable="false" title="Estreno" type="java.lang.Object"/>
                     <Column editable="false" title="En cartelera" type="java.lang.Object"/>
@@ -190,6 +191,11 @@
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
                       <Title/>
                       <Editor/>
