--- a/TPFINAL/src/Vista/crearProyeccion.form
+++ b/TPFINAL/src/Vista/crearProyeccion.form
@@ -50,10 +50,7 @@
                                   <Group type="102" attributes="0">
                                       <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="102" alignment="0" attributes="0">
-                                              <Component id="jLabel3" min="-2" pref="106" max="-2" attributes="0"/>
-                                              <EmptySpace pref="1" max="-2" attributes="0"/>
-                                          </Group>
+                                          <Component id="jLabel3" alignment="0" min="-2" pref="106" max="-2" attributes="0"/>
                                           <Group type="102" alignment="0" attributes="0">
                                               <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
                                               <Group type="103" groupAlignment="0" attributes="0">
